--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
     "version": "3.0.0",
     "description": "Critical Scripts | Video Call Proxy Server | https://criticalscripts.shop",
     "dependencies": {
-        "node-fetch": "^2.6.1",
-        "node-turn": "^0.0.6",
-        "socket.io": "^2.3.0"
+        "node-turn": "^0.0.6"
     }
 }
